@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * -------------------------
  * CombinedDomainXYPlot.java
  * -------------------------
- * (C) Copyright 2001-2007, by Bill Kelemen and Contributors.
+ * (C) Copyright 2001-2008, by Bill Kelemen and Contributors.
  *
  * Original Author:  Bill Kelemen;
  * Contributor(s):   David Gilbert (for Object Refinery Limited);
@@ -84,6 +84,9 @@
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
  * 27-Nov-2007 : Modified setFixedRangeAxisSpaceForSubplots() so as not to
  *               trigger change event in subplots (DG);
+ * 28-Jan-2008 : Reset fixed range axis space in subplots for each call to
+ *               draw() (DG);
+ * 27-Mar-2008 : Add documentation for getDataRange() method (DG);
  *
  */
 
@@ -92,7 +95,6 @@ package org.jfree.chart.plot;
 import java.awt.Graphics2D;
 import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
-import java.io.Serializable;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -106,7 +108,6 @@ import org.jfree.chart.event.PlotChangeEvent;
 import org.jfree.chart.event.PlotChangeListener;
 import org.jfree.chart.renderer.xy.XYItemRenderer;
 import org.jfree.chart.util.ObjectUtilities;
-import org.jfree.chart.util.PublicCloneable;
 import org.jfree.chart.util.RectangleEdge;
 import org.jfree.chart.util.RectangleInsets;
 import org.jfree.data.Range;
@@ -116,9 +117,7 @@ import org.jfree.data.Range;
  * common domain axis.
  */
 public class CombinedDomainXYPlot extends XYPlot 
-                                  implements Cloneable, PublicCloneable, 
-                                             Serializable,
-                                             PlotChangeListener {
+        implements PlotChangeListener {
 
     /** For serialization. */
     private static final long serialVersionUID = -7765545541261907383L;
@@ -190,15 +189,19 @@ public class CombinedDomainXYPlot extends XYPlot
     }
 
     /**
-     * Returns the range for the specified axis.  This is the combined range 
-     * of all the subplots.
+     * Returns a range representing the extent of the data values in this plot
+     * (obtained from the subplots) that will be rendered against the specified 
+     * axis.  NOTE: This method is intended for internal JFreeChart use, and 
+     * is public only so that code in the axis classes can call it.  Since 
+     * only the domain axis is shared between subplots, the JFreeChart code 
+     * will only call this method for the domain values (although this is not 
+     * checked/enforced).
      *
      * @param axis  the axis.
      *
      * @return The range (possibly <code>null</code>).
      */
     public Range getDataRange(ValueAxis axis) {
-
         Range result = null;
         if (this.subplots != null) {
             Iterator iterator = this.subplots.iterator();
@@ -208,7 +211,6 @@ public class CombinedDomainXYPlot extends XYPlot
             }
         }
         return result;
-
     }
 
     /**
@@ -282,7 +284,6 @@ public class CombinedDomainXYPlot extends XYPlot
             axis.configure();
         }
         fireChangeEvent();
-
     }
 
     /**
@@ -430,6 +431,7 @@ public class CombinedDomainXYPlot extends XYPlot
         RectangleInsets insets = getInsets();
         insets.trim(area);
 
+        setFixedRangeAxisSpaceForSubplots(null);
         AxisSpace space = calculateAxisSpace(g2, area);
         Rectangle2D dataArea = space.shrink(area, null);
 
@@ -584,7 +586,8 @@ public class CombinedDomainXYPlot extends XYPlot
     }
 
     /**
-     * Sets the fixed range axis space.
+     * Sets the fixed range axis space and sends a {@link PlotChangeEvent} to
+     * all registered listeners.
      *
      * @param space  the space (<code>null</code> permitted).
      */
